2011-07-12  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_atomic): Fix handling of
	#pragma omp atomic capture { x++; v = x; } and
	#pragma omp atomic capture { x--; v = x; }.

2011-07-11  Jakub Jelinek  <jakub@redhat.com>

	* semantics.c (finish_omp_clauses): Don't complain about
	const qualified predetermined vars in firstprivate clause,
	unless it is a static data member.

	Revert
	2011-03-10  Jakub Jelinek  <jakub@redhat.com>

	* cp-gimplify.c (cxx_omp_predetermined_sharing): Don't return
	OMP_CLAUSE_DEFAULT_SHARED for decls with TYPE_READONLY
	type having no mutable member.
	* semantics.c (finish_omp_clauses): Complain about
	TREE_READONLY decls with no mutable member in private,
	lastprivate and reduction clauses.

2011-04-28  Jakub Jelinek  <jakub@redhat.com>

	* pt.c (tsubst_omp_clauses): Handle OMP_CLAUSE_FINAL and
	OMP_CLAUSE_MERGEABLE.
	* semantics.c (finish_omp_clauses): Likewise.
	(finish_omp_taskyield): New function.
	* parser.c (cp_parser_omp_clause_name): Handle final and
	mergeable clauses.
	(cp_parser_omp_clause_final, cp_parser_omp_clause_mergeable): New
	functions.
	(cp_parser_omp_all_clauses): Handle PRAGMA_OMP_CLAUSE_FINAL
	and PRAGMA_OMP_CLAUSE_MERGEABLE.
	(OMP_TASK_CLAUSE_MASK): Allow final and mergeable clauses.
	(cp_parser_omp_taskyield): New function.
	(cp_parser_pragma): Handle PRAGMA_OMP_TASKYIELD.
	* cp-tree.h (finish_omp_taskyield): New prototype.

2011-04-27  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_atomic): Parse #pragma omp write
	RHS using cp_parser_expression instead of cp_parser_unary_expression.

	* parser.c (cp_parser_omp_atomic): Handle parsing OpenMP 3.1 atomics.
	Adjust finish_omp_atomic caller.
	* cp-tree.h (finish_omp_atomic): Adjust prototype.
	* semantics.c (finish_omp_atomic): Add OPCODE, V and LHS1 arguments.
	Handle OpenMP 3.1 atomics.
	* pt.c (tsubst_expr) <case OMP_ATOMIC>: Handle OpenMP 3.1 atomics.

2011-04-21  Jakub Jelinek  <jakub@redhat.com>
